libs/preprocessor/tests/errors/pe21_pragma_invalid_suppress/stderr.ansi
[0m[1m[38;5;9merror[PE21][0m[1m: unknown #pragma suppress `something`[0m
  [0m[34m┌─[0m source.hpp:1:24
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m #pragma hemtt suppress [0m[31msomething[0m line
  [0m[34m│[0m                        [0m[31m^^^^^^^^^[0m [0m[31munknown #pragma suppress[0m

